# PRTS

./: .gitignore  Cargo.toml  Git_Uploader.py  LICENSE  LISENCE.txt  Nasm.md  PRTS.img  PRTS.nas  PRTS开发者日志.md  asm.bat  complie.bat  gitu.bat  install.bat  main.c  run.bat
.cargo/: config.toml
md/: README.md
src/: main.rs  serial.rs  vga_buffer.rs
