[package]
name = "prts"
version = "0.1.0"
edition = "2018"
authors = ["Alfred <abonlinejudge@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
